--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </style>
 <body>
     <section id="card">
-      <img src="jessica.jpg" alt="">
+      <img src="https://media.istockphoto.com/id/1389348844/es/foto/foto-de-estudio-de-una-hermosa-joven-sonriendo-mientras-est%C3%A1-de-pie-sobre-un-fondo-gris.jpg?s=612x612&w=0&k=20&c=kUufmNoTnDcRbyeHhU1wRiip-fNjTWP9owjHf75frFQ=" alt="">
       <h1>Jessica Randall</h1>
       <h2>London, United Kingdom</h2>
       <p>"Front-end developer and avid reader"</p>
